Fixed off center background and solved the long verse problem and added more detailed instrucitons

--- a/src/styles/00-canvas.scss
+++ b/src/styles/00-canvas.scss
@@ -10,8 +10,8 @@
 
 .canvas-box {
     // position: absolute;
-    // height: 900px;
-    width: 1000px;
+    height: auto;
+    width: 900px;
     z-index: 1;
     background-color: black ;
 
