--- a/src/styles/01-lyrics.scss
+++ b/src/styles/01-lyrics.scss
@@ -22,9 +22,12 @@ span {
 
 }
 
+#showLyrics {
+    width: 900px;
+
+}
+
 .lyrics {
-    // margin: 5% 0 5% 0;
-    // background-color: black;
     height: 850px;
     width: 900px;
     text-align: center;
